--- a/cartridges/ramda/.eslintrc.json
+++ b/cartridges/ramda/.eslintrc.json
@@ -13,6 +13,8 @@
       "no-use-before-define": "off",
       "no-shadow": "off",
       "no-self-compare": "off",
-      "no-prototype-builtins": "off"
+      "no-prototype-builtins": "off",
+      "valid-jsdoc": "off",
+      "one-var": "off"
     }
 }
