--- a/cartridges/lodash/.eslintrc.json
+++ b/cartridges/lodash/.eslintrc.json
@@ -16,6 +16,9 @@
       "no-prototype-builtins": "off",
       "consistent-return": "off",
       "no-sequences": "off",
-      "eqeqeq": "off"
+      "eqeqeq": "off",
+      "no-unused-expressions": "off",
+      "no-labels": "off",
+      "no-continue": "off"
     }
 }
