--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "sgmf-scripts --lint js",
     "upload": "sgmf-scripts --upload",
-    "uploadCartridge": "sgmf-scripts --uploadCartridge moment",
+    "uploadCartridge": "sgmf-scripts --uploadCartridge jsPDF && sgmf-scripts --uploadCartridge plugin_testlibraries",
     "uploadDw": "sgmf-scripts",
     "watch": "sgmf-scripts --watch",
     "precommit": "npm run lint --loglevel=silent",
@@ -20,7 +20,7 @@
   "author": {
     "name": "Thomas Theunen",
     "email": "thomas.theunen@forward.eu",
-    "url": "https://thomastheunen.eu"
+    "url": "https://forward.eu"
   },
   "license": "MIT",
   "homepage": "https://github.com/taurgis/salesforce-commerce-cloud-libraries.git#readme",
