--- a/package.json
+++ b/package.json
@@ -25,16 +25,11 @@
   "license": "MIT",
   "homepage": "https://github.com/taurgis/salesforce-commerce-cloud-libraries.git#readme",
   "devDependencies": {
-    "eslint": "^6.2.2",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^5.0.3",
-    "eslint-formatter-pretty": "^1.3.0",
-    "eslint-formatter-summary": "^1.0.2",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-sitegenesis": "~1.0.0",
     "sgmf-scripts": "^2.4.1"
-  },
-  "dependencies": {
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1"
   },
   "pre-commit": [
     "precommit"
